[tool.poetry]
name = "python-data-parsers"
version = "0.0.0"
description = ""
authors = ["Firstname Lastname <username@domain.com>"]
readme = "README.md"
packages = [{include = "python_data_parsers"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
tabulate = "^0.9.0"
matplotlib = "^3.7.1"
PyGObject = "^3.44.1"
typing-extensions = "^4.6.2"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
sphinx-rtd-theme = "^1.2.1"

[tool.poetry.group.jupyter]
optional=true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.6.1"
ipympl = "^0.9.3"
jupyterlab-vim = "^0.16.0"
jupyterlab-vimrc = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
